# lala-land

./: .gitignore  lala-land.cabal
Data/Matrix/: PureHaskell.hs
Data/Matrix/BLAS/: Dense.hs
Data/Vector/: Strided.hs
Data/Vector/Strided/: Mutable.hs
Numeric/LALA/: MatOp.hs  VecSpace.hs
lala-classes/: lala-classes.cabal
lala-classes/Numeric/LALA/: MatrixOp.hs  VectorSpace.hs
